[gd_scene load_steps=3 format=3 uid="uid://cntgtkkcan1s2"]

[ext_resource type="Script" path="res://tests/test_promised_http_request.gd" id="1_pbrcs"]
[ext_resource type="Script" path="res://scripts/promises/promised_http_request.gd" id="2_cexoy"]

[node name="TestPromisedHTTPRequest" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pbrcs")

[node name="PromisedHTTPRequest" type="HTTPRequest" parent="."]
unique_name_in_owner = true
script = ExtResource("2_cexoy")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
offset_right = 600.0
offset_bottom = 486.0
size_flags_vertical = 3

[node name="ResultEdit" type="CodeEdit" parent="ScrollContainer"]
unique_name_in_owner = true
offset_right = 600.0
offset_bottom = 486.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "HTTP response goes here."
editable = false

[node name="CancelRequestButton" type="Button" parent="."]
offset_top = 490.0
offset_right = 600.0
offset_bottom = 533.0
text = "Cancel Request"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_top = 537.0
offset_right = 600.0
offset_bottom = 1024.0
size_flags_vertical = 3

[node name="GetExampleDotComButton" type="Button" parent="VBoxContainer"]
offset_right = 600.0
offset_bottom = 43.0
text = "Get example.com"

[node name="RequestJSONButton" type="Button" parent="VBoxContainer"]
offset_top = 47.0
offset_right = 600.0
offset_bottom = 90.0
text = "Request JSON"

[connection signal="pressed" from="CancelRequestButton" to="." method="_on_cancel_request_button_pressed"]
[connection signal="pressed" from="VBoxContainer/GetExampleDotComButton" to="." method="_on_get_example_dot_com_button_pressed"]
[connection signal="pressed" from="VBoxContainer/RequestJSONButton" to="." method="_on_request_json_button_pressed"]
